# battery-runner

./: .gitignore  README.md  pyproject.toml  zoo-project.json
docs/raw/: 00__conversations.txt  01__initial-shotgun-spec.json
src/batteryrunner/: __init__.py  __main__.py  bproc_context.py  cli.py  runner.py  storage.py  ui.py  util.py
